dded Location and Settings pages

--- a/locations.html
+++ b/locations.html
@@ -55,13 +55,13 @@
 						</a>
 					</li>
 					<li class="aside-menu-list-item">
-						<a href="./locations.html" class="aside-menu-list-link">
+						<a href="#" class="aside-menu-list-link">
 							<img src="./images/location.svg" alt="Локации" class="aside-menu-list-item-img">
 							<p class="aside-menu-list-item-text">Локации</p>
 						</a>
 					</li>
 					<li class="aside-menu-list-item">
-						<a href="./settings.html" class="aside-menu-list-link">
+						<a href="#" class="aside-menu-list-link">
 							<img src="./images/gear_wheel_orange.svg" alt="Настройки" class="aside-menu-list-item-img">
 							<p class="aside-menu-list-item-text">Настройки</p>
 						</a>
@@ -69,7 +69,7 @@
 				</ul>
 
 				<div class="aside-close-memu">
-					<img src="./images/arrow.svg" alt="Стрелка">
+					<img src="./images/arrow.svg" alt="Стрелка" >
 					<p class="aside-close-memu-text">Скрыть меню</p>
 				</div>
 			</aside>
