the layout of the settings page is ready

--- a/locations.html
+++ b/locations.html
@@ -54,14 +54,14 @@
 							<p class="aside-menu-list-item-text">Уведомления</p>
 						</a>
 					</li>
-					<li class="aside-menu-list-item">
+					<li class="aside-menu-list-item active">
 						<a href="./locations.html" class="aside-menu-list-link">
 							<img src="./images/location.svg" alt="Локации" class="aside-menu-list-item-img">
 							<p class="aside-menu-list-item-text">Локации</p>
 						</a>
 					</li>
 					<li class="aside-menu-list-item">
-						<a href="./settings.html" class="aside-menu-list-link">
+						<a href="./settings.html" class="aside-menu-list-link ">
 							<img src="./images/gear_wheel_orange.svg" alt="Настройки" class="aside-menu-list-item-img">
 							<p class="aside-menu-list-item-text">Настройки</p>
 						</a>
@@ -75,8 +75,24 @@
 			</aside>
 			<main class="page-content">
 				<h1 class="title">Локации / Все локации</h1>
+
+				<ul class="set-menu-list">
+					<li class="set-menu-list-item active">
+						<a href="#" class="set-menu-list-item-link">Все локации</a>
+					</li>
+					<li class="set-menu-list-item">
+						<a href="#" class="set-menu-list-item-link">Импорт/Экспорт</a>
+					</li>
+					<li class="set-menu-list-item">
+						<a href="#" class="set-menu-list-item-link">Настройки</a>
+					</li>
+				</ul>
+
+
 				<button class="create-popap">Создать локацию</button>
 				<button class="edit-popap">Редактировать локацию</button>
+
+
 			</main>
 		</div>
 		<!--Конец блока Основной контент-->
