layout and page styles Location

--- a/locations.html
+++ b/locations.html
@@ -75,22 +75,141 @@
 			</aside>
 			<main class="page-content">
 				<h1 class="title">Локации / Все локации</h1>
+				<div>
+					<ul class="set-menu-list">
+						<li class="set-menu-list-item active">
+							<a href="#" class="set-menu-list-item-link">Все локации</a>
+						</li>
+						<li class="set-menu-list-item">
+							<a href="#" class="set-menu-list-item-link">Импорт/Экспорт</a>
+						</li>
+						<li class="set-menu-list-item">
+							<a href="#" class="set-menu-list-item-link">Настройки</a>
+						</li>
+					</ul>
+					<button class="synchronization">
+						<img src="./images/synchronization.svg" alt="Сихронизации" class="table-btn-plus">
+						<span class="table-btn-text">синхронизация</span> <span class="synchronization-text">(17.05.2024 15:23:21)</span>
+					</button>
+				</div>
 
-				<ul class="set-menu-list">
-					<li class="set-menu-list-item active">
-						<a href="#" class="set-menu-list-item-link">Все локации</a>
+				<div class="container">
+					<button class="create-popap"><img src="./images/plus_whait.svg" alt="Добавить"
+							class="table-btn-plus">
+						<span class="table-btn-text">Создать локацию</span></button>
+					<div>
+
+						<input type="checkbox" name="happy" id="happy" class="checkbox">
+						<label for="happy">Поиск по точному вхождению</label>
+						<input type="text" class="search" placeholder="Поиск">
+					</div>
+				</div>
+				<ul>
+					<li>
+						<div class="department">
+							<img src="./images/circle_minus.svg" alt="" class="department-img">
+							<img src="./images/dots.svg" alt="" class="department-img1">
+							<span class="department-text1">Локация 1</span>
+							<span class="department-text2">512</span>
+							<div class="department-btns">
+								<button class="edit-popap"><img src="./images/pen.svg"
+										alt="Редактировать">Редактировать</button>
+								<button class="delete"><img src="./images/delete.svg" alt="Удалить">Удалить</button>
+							</div>
+						</div>
+						<ul>
+							<li>
+								<div class="department sub-department">
+									<img src="./images/circle_plus.svg" alt="">
+									<img src="./images/dots.svg" alt="" class="department-img1">
+									<span class="department-text-title">Подотдел 1</span>
+									<span class="department-text2">10</span>
+									<span class="department-text3">Для утерь</span>
+									<div class="department-btns">
+										<button class="edit-popap"><img src="./images/pen.svg"
+												alt="Редактировать">Редактировать</button>
+										<button class="delete"><img src="./images/delete.svg"
+												alt="Удалить">Удалить</button>
+									</div>
+								</div>
+							</li>
+							<li>
+								<div class="department sub-department">
+									<img src="./images/circle_minus.svg" alt="">
+									<img src="./images/dots.svg" alt="" class="department-img1">
+									<span class="department-text-title">Подотдел 2</span>
+									<span class="department-text2">100</span>
+									<div class="department-btns">
+										<button class="edit-popap"><img src="./images/pen.svg"
+												alt="Редактировать">Редактировать</button>
+										<button class="delete"><img src="./images/delete.svg"
+												alt="Удалить">Удалить</button>
+									</div>
+								</div>
+								<ul>
+									<li>
+										<div class="department department-bottom">
+											<img src="./images/dots.svg" alt="" class="department-img1">
+											<span class="department-text-subtitle">Подподотдел 1</span>
+											<span class="department-text2">2</span>
+											<span class="department-text3">Виртуальная</span>
+											<span class="department-text4">Без штрихкода</span>
+											<div class="department-btns">
+												<button class="edit-popap"><img src="./images/pen.svg"
+														alt="Редактировать">Редактировать</button>
+												<button class="delete"><img src="./images/delete.svg"
+														alt="Удалить">Удалить</button>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<div class="department sub-department">
+									<img src="./images/circle_plus.svg" alt="">
+									<img src="./images/dots.svg" alt="" class="department-img1">
+									<span class="department-text-title">Подотдел 3</span>
+									<span class="department-text2">400</span>
+									<div class="department-btns">
+										<button class="edit-popap"><img src="./images/pen.svg"
+												alt="Редактировать">Редактировать</button>
+										<button class="delete"><img src="./images/delete.svg"
+												alt="Удалить">Удалить</button>
+									</div>
+								</div>
+							</li>
+						</ul>
 					</li>
-					<li class="set-menu-list-item">
-						<a href="#" class="set-menu-list-item-link">Импорт/Экспорт</a>
+					<li>
+						<div class="department">
+							<img src="./images/circle_plus.svg" alt="">
+							<img src="./images/dots.svg" alt="" class="department-img1">
+							<span class="department-text1">Локация 2</span>
+							<span class="department-text2">100</span>
+							<div class="department-btns">
+								<button class="edit-popap"><img src="./images/pen.svg"
+										alt="Редактировать">Редактировать</button>
+								<button class="delete"><img src="./images/delete.svg" alt="Удалить">Удалить</button>
+							</div>
+						</div>
 					</li>
-					<li class="set-menu-list-item">
-						<a href="#" class="set-menu-list-item-link">Настройки</a>
+					<li>
+						<div class="department">
+							<img src="./images/circle_plus.svg" alt="">
+							<img src="./images/dots.svg" alt="" class="department-img1">
+							<span class="department-text1">Локация 3</span>
+							<span class="department-text2">100</span>
+							<div class="department-btns">
+								<button class="edit-popap"><img src="./images/pen.svg"
+										alt="Редактировать">Редактировать</button>
+								<button class="delete"><img src="./images/delete.svg" alt="Удалить">Удалить</button>
+							</div>
+						</div>
 					</li>
 				</ul>
 
 
-				<button class="create-popap">Создать локацию</button>
-				<button class="edit-popap">Редактировать локацию</button>
+
 
 
 			</main>
