--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./css/styles.css">
 	<link rel="stylesheet"
 		href="https://fonts.google.com/share?selection.family=Montserrat:ital,wght@0,100..900;1,100..900">
+	<link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Galdeano">
 	<title>Тестовое задание:Локации</title>
 </head>
 
@@ -129,7 +130,7 @@
 									<td><input type="checkbox" name="happy" id="happy" class="checkbox" checked>
 										<label for="happy"></label>
 									</td>
-									<td><input type="checkbox" name="happy" id="happy"class="checkbox" checked>
+									<td><input type="checkbox" name="happy" id="happy" class="checkbox" checked>
 										<label for="happy"></label>
 									</td>
 									<td></td>
@@ -317,7 +318,7 @@
 			<div class="footer-btns">
 				<button class="footer-btn-save"> <img src="./images/save.svg" alt="Сохранить"
 						class="footer-btn-save-img"> <span class="footer-btn-save-text">Сохранить</span></button>
-				<button class="footer-btn-cancel"><span class="footer-btn-cancel-text"></span>Отменить</button>
+				<button class="footer-btn-cancel"><span class="footer-btn-cancel-text">Отменить</span></button>
 			</div>
 			<div class="footer-link">
 				<img src="./images/docum.svg" alt="Документация" class="footer-link-image">
