--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="./css/styles.css">
 	<link rel="stylesheet"
 		href="https://fonts.google.com/share?selection.family=Montserrat:ital,wght@0,100..900;1,100..900">
-	<title>Тестовое задание:Локации</title>
+		<link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Galdeano">	
+	<title>Тестовое задание:Настройки</title>
 </head>
 
 <body>
